--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
     "target": "ESNext",
     "strict": true
   },
-  "include": ["domain/apps/backend/src/**/*.ts"]
+  "include": ["apps/backend/src/**/*.ts"]
 }
